--- a/src/Markdown.Abstractions/Markdown.Abstractions.csproj
+++ b/src/Markdown.Abstractions/Markdown.Abstractions.csproj
@@ -2,7 +2,7 @@
 
 	<!-- Project -->
 	<PropertyGroup Label="project">
-		<TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net8.0;net7.0;net6.0</TargetFrameworks>
 		<LangVersion>13</LangVersion>
 		<Nullable>enable</Nullable>
 
